 ####    #### ####    #### ############ ####         #### ####
 ####    #### ####    #### ####    #### ####         ####  ####
  ####  ####   ####   #### ####    #### ####         ####   ####
   ########     ########## ####    #### ####         ####    ####
       #####
        #####       Quake Army Knife 6.6 Changelog

6.6.0 Beta 7
============
* [DanielPharos]: Added detection of corrupt AMD driver registry key.

* [DanielPharos]: Added the GDI workaround to OpenGL. This fixes the drawing of GDI on OpenGL views
          - on more modern Windows machines.

* [DanielPharos]: Brought back the fullscreen view window! Also, added a toolbar that allows you to
          - select the renderer to use for new windows. (Work in progress.) Added an experimental
          - fancy fullscreen mode, with a tight-ish message pump.

* [DanielPharos]: Added mousewheel scrolling support in the 2D views.

* [DanielPharos]: Fixed texture positioning tool causing the treeview panel to partially disappear.

* [DanielPharos]: Unwrap texture coordinates on .map export. This allows .bsp compilers to
          - merge texinfo structures, to avoid hitting the "too many surfaces" limit too soon.

* [DanielPharos]: Added binary StL importing.

* [DanielPharos]: Added experimental StL model importing (ASCII format only).

* [DanielPharos]: Added mouse scroll wheel support in various places.

* [DanielPharos]: Fixed long-standing bug with character output (backslashes) in the console. Note:
          - this changes the font used.

* [DanielPharos]: Fixed the VIDEO enumeration for system details info.

* [DanielPharos]: Fixed the Reset-button in the Configuration to do what people expected it to do.

* [DanielPharos]: Fixed several leaks on error code paths, and a wrong Win32 API call
          - when starting external processes.

* [DanielPharos]: Added FastMove and FastCode for better performance.

* [DanielPharos]: Stop access violation and other weird errors if Glide library wasn't