@@ -14,6 +14,9 @@ $Id$
 
 6.6.0 Beta 7
 ============
+* [DanielPharos]: Fixed a long-standing bug that could cause a runtime error on startup when
+          - enumerating the video hardware and display settings.
+
 * [DanielPharos]: Added detection of corrupt AMD driver registry key.
 
 * [DanielPharos]: Added the GDI workaround to OpenGL. This fixes the drawing of GDI on OpenGL views
